@@ -19,3 +19,4 @@ obbkgnd.17.png 0 57 11 10
 obbkgnd.18.png 0 57 0 0
 obbkgnd.19.png 0 57 9 6
 obbkgnd.20.png 0 57 2 -15
+obbkgnd.21.png 0 57 0 0
